# TSAI-S3-LLMVisualizer

./: .gitignore  README.md  app.py  demo_gemini.py  main.py  pyproject.toml  requirements-cpu.txt  requirements.txt  setup_gemini.py
static/css/: style.css
static/js/: visualization.js
templates/: index.html
